# animated-umbrella

./: CMakeLists.txt
include/: lib_cfg.hpp
src/: CMakeLists.txt  main.cpp
